--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: MovingData
 header-img: img/home-bg.jpg
 email: tylermalin@gmail.com
 description: "Exploring The Relationship Between Complex Data and Visual Communication"
-baseurl: "/github.io"
+baseurl: "/tylermalin.github.io"
 url: "http://tylermalin.github.io"
 twitter_username: @tylermalin
 github_username:  tylermalin
